<resources>

    <!--- App information-->
    <string name="app_name">Let\'s Go</string>
    <string name="title_activity_login">Let\'s Go</string>

    <!---Opening Page Activity-->
    <string name="welcome_label">What do you want to do today?Let\'s see what CU has planned!</string>
    <string name="welcome_button">Next</string>

    <!--- Login Activity: Existing User-->
    <string name="login_label">Login</string>
    <string name="login_oldUser_email_label">Email: </string>
    <string name="login_oldUser_password_label">Password: </string>
    <string name="login_oldUser_input_failure">Email/password incorrect, try again.</string>
    <string name="login_oldUser_field_failure">This field is required</string>

    <!--- Login Activity: New User-->
    <string name="login_newUser_prompt">Don\'t have an account? Create one below \n</string>
    <string name="login_newUser_prompt_button">Create one here</string>
    <string name="login_newUser_fname">First name: </string>
    <string name="login_newUser_email">Email: </string>
    <string name="login_newUser_password0">Password:</string>
    <string name="login_newUser_password1">Re-enter Password:</string>
    <string name="login_newUser_failure">Passwords do not match, try again.</string>

    <!--- Login Activity: -->
    <string name="login_button">Submit</string>
    <string name="title_text">What do you want to do today?\nLet\'s see what CU has planned!</string>

    <!-- Sign-in status messages -->
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>


    <!--- Categories list-->


    <!--- List of events under a category-->


    <!--- Individual Event Screen-->

    <string name="event_title">Event Title: </string>
    <string name="event_date">Event Date:</string>
    <string name="event_time">Event Time:</string>
    <string name="event_location">Event Location:</string>
    <string name="event_location_map">Checkout Google Maps</string>
    <string name="event_calendar">Add to Google Calendar</string>

    <string name="title_activity_event_view">Event Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="location_label">Location:</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="current_location">Current Location</string>
    <string name="map_info">Map info</string>



</resources>
